src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CCM_Followup_Id__c</fullName>
        <description>Related CCM Followup Id, used in validation rule to prevent changes once synced. Set via Tibco.</description>
        <label>CCM Followup Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCM_Task_ID__c</fullName>
        <description>This is CCM&apos;s Task ID</description>
        <externalId>true</externalId>
        <label>CCM Task ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <description>Used for ContactUs page</description>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Completed__c</fullName>
        <description>The date and time the status was set to completed</description>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Category__c</fullName>
        <label>Follow Up Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>CCM Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Reason__c</fullName>
        <label>Follow Up Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Follow_Up_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer requests findings of investigation</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t like response handling</fullName>
                </value>
                <value>
                    <fullName>Did not receive what was promised; item damaged</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Photo Received</fullName>
                </value>
                <value>
                    <fullName>Production Code Update</fullName>
                </value>
                <value>
                    <fullName>Product Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Thank you; service testimonial (i.e. agent; reply helpful)</fullName>
                </value>
                <value>
                    <fullName>Welcome Call</fullName>
                </value>
                <value>
                    <fullName>Retention Call</fullName>
                </value>
                <value>
                    <fullName>Service Visit</fullName>
                </value>
                <value>
                    <fullName>Pregnancy Follow Up</fullName>
                </value>
                <value>
                    <fullName>Closeout with Consumer</fullName>
                </value>
                <value>
                    <fullName>Intake Agent Request</fullName>
                </value>
                <value>
                    <fullName>Audio Log Request</fullName>
                </value>
                <value>
                    <fullName>Product Retrieval Request</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Request</fullName>
                </value>
                <value>
                    <fullName>Consumer Recontact Request</fullName>
                </value>
                <value>
                    <fullName>GCR Request on AE</fullName>
                </value>
                <value>
                    <fullName>GCR Request to QA</fullName>
                </value>
                <value>
                    <fullName>Agent Clarification Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_required__c</fullName>
        <label>Send Another Email To Consumer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Location__c</fullName>
        <label>Last Modified Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner_ID__c</fullName>
        <label>New Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner_Location__c</fullName>
        <label>New Owner Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <label>New Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner_ID__c</fullName>
        <label>Old Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Location__c</fullName>
        <label>Old Owner Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <label>Old Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_System__c</fullName>
        <description>Originating system of the Task</description>
        <inlineHelpText>Originating system of the Task</inlineHelpText>
        <label>Originating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARGUS</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                    <default>true</default>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Contact_Center__c</fullName>
        <description>Field to capture the contact center of the user that closes the activity.</description>
        <inlineHelpText>Value is set when activity is completed.</inlineHelpText>
        <label>User Contact Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <description>Field to capture the department of the user that closes the activity.</description>
        <inlineHelpText>Value is set when activity is completed.</inlineHelpText>
        <label>User Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Location__c</fullName>
        <label>Created By Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Conga_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hawn</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Error</value>
        </filters>
        <label>Conga Composer Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>Tasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>